--- a/views/exist.ejs
+++ b/views/exist.ejs
@@ -14,7 +14,7 @@
           <input type="radio" class="btn-check" name="options-outlined" id="success-outlined" autocomplete="off" checked>
 <label class="btn btn-outline-success" for="success-outlined">Already Subscribed!!</label>
           <p class="lead">
-            Good!! You are already Subscibed to our Newsletter. New Features Coming Up!! Enjoy reading!!!
+            Awesome!! You are already Subscibed to our Newsletter. Watch out for our Special Edition!!!
           </p>
         </div>
       </div>
